# item_synchronizer

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  HISTORY.md  README.md  pyproject.toml
.github/workflows/: ci.yml  codacy-coverage-reporter.yml  greetings.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
hooks/: pre-commit
item_synchronizer/: __init__.py  helpers.py  resolution_strategy.py  synchronizer.py  types.py
res/drawio/: resolution-strategy.drawio  sync0.drawio  sync1.drawio  sync2.drawio  update-n-delete0.drawio  update-n-delete1.drawio
scripts/: check_style.py
tests/: test_resolution_strategy.py  test_synchronizer.py
