[tool.poetry]
name = "item_synchronizer"
version = "1.1.2"
description = "Synchronize items bi-directionally between two different sources"
authors = ["Nikos Koukis <nickkouk@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bergercookie/item_synchronizer"
repository = "https://github.com/bergercookie/item_synchronizer"
include = ["item_synchronizer/py.typed"]
classifiers = [
  "Framework :: Pytest",
  "License :: OSI Approved :: MIT License",
  "Natural Language :: English",
  "Operating System :: Unix",
  "Operating System :: Unix",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Topic :: Utilities",
]

# end-user dependencies --------------------------------------------------------
[tool.poetry.dependencies]
python = "^3.8"
loguru = "^0.5.3"
bidict = "^0.21.4"
bubop = "^0.1.4"

# dev dependencies -------------------------------------------------------------
[tool.poetry.dev-dependencies]
black = { version = "21.11b1", allow-prereleases = true }
identify = "^2.4.0"
isort = "^5.10.1"
mock = "*"
mypy = "*"
pdbpp = "^0.10.3"
pre-commit = "^2.16.0"
pyfakefs = "^4.5.3"
pylint = "^2.12.2"
pyright = "*"
pytest = "*"
types-PyYAML = "^6.0.1"
types-python-dateutil = "^2.8.3"

# isort ------------------------------------------------------------------------
[tool.isort]
line_length = 95
include_trailing_comma = true
multi_line_output = 3
profile = "black"

# black ------------------------------------------------------------------------
[tool.black]
experimental-string-processing = true
line-length = 95
target-version = ['py38', 'py39']
include = '\.pyi?$'

# mypy -------------------------------------------------------------------------
[tool.mypy]
warn_return_any = true
warn_unused_configs = true
no_implicit_reexport = false

[[tool.mypy.overrides]]
module = ["tqdm", "pytest", "pexpect"]
ignore_missing_imports = true

# pylint -----------------------------------------------------------------------
[tool.pylint]
[tool.pylint.master]
persistent = "yes"
suggestion-mode = "yes"
unsafe-load-any-extension = "no"
ignore = "VCS"

[tool.pylint.messages_control]
disable = "C0330,C0326,C0103,W0613,R0201,R1720,R1705,W0104,C0301"

[tool.pylint.refactoring]
max-nested-blocks = 5
never-returning-functions = "sys.exit,argparse.parse_error"

[tool.pylint.similarities]
ignore-comments = "yes"
ignore-docstrings = "no"
ignore-imports = "yes"
# ignore-signatures=no
min-similarity-lines = 4

[tool.pylint.format]
max-line-length = 95
ignore-invalid-name = true
max-module-lines = 500

[tool.pylint.string]
check-quote-consistency = "yes"

# pyright ----------------------------------------------------------------------
[tool.pyright]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.8"
pythonPlatform = "Linux"

# build-system -----------------------------------------------------------------
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
